--- a/web/config/servers.template.ini
+++ b/web/config/servers.template.ini
@@ -1,7 +1,7 @@
 [0]
-name                    = ""
+name                    = "localhost"
 server_id               = 1
-config[url]             = ":2812"
+config[url]             = "localhost:2812"
 config[uri_xml]         = "_status?format=xml"
 config[url_ssl]         = false
 config[http_username]   = "admin"
