--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Data files #
-##############
-data/*.xml
-data/*/*.xml.*
-
 # OS generated files #
 ######################
 .DS_Store*
@@ -12,5 +7,10 @@ Thumbs.db
 
 # Config files #
 ##############
-config/.htpasswd
-config/servers.ini
+web/config/.htpasswd
+web/config/servers.ini
+
+# Data files #
+##############
+web/data/*.xml
+web/data/*/*.xml.*
