--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,15 @@
     "keywords": ["monit", "graph"],
     "license": "BSD 3-clause",
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=5.6.0",
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "tuupola/slim-basic-auth": "^2.2"
     },
     "require-dev": {
-      "phpunit/phpunit": ">=4.8 < 6.0"
+      "phpunit/phpunit": ">=4.8",
+       "squizlabs/php_codesniffer": "^2.5"
     },
     "authors": [
         {
@@ -20,16 +21,21 @@
             "email": "dan@dreamconception.com"
         }
     ],
-    "autoload-dev": {
+    "autoload": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "MonitGraph\\": "src/MonitGraph"
         }
     },
     "scripts": {
-        "server": "php -S 0.0.0.0:8080 -t web/public web/public/index.php",
-        "test": "phpunit",
-        "cron": "php src/cron.php",
-        "build-massive-data": "php tests/utils/build_massive_data.php",
-        "reverse-xml": "php src/reverse_xml.php"
+        "server": "php -S 0.0.0.0:8080 -t src/web/public src/web/public/index.php",
+        "cron": "php src/scripts/cron.php",
+        "build-massive-data": "php tests/scripts/build_massive_data.php",
+        "reverse-xml": "php src/scripts/reverse_xml.php",
+        "test": [
+            "@phpunit",
+            "@phpcs"
+        ],
+        "phpunit": "php vendor/bin/phpunit",
+        "phpcs": "php vendor/bin/phpcs"
     }
 }
