--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "tuupola/slim-basic-auth": "^2.2"
+        "tuupola/slim-basic-auth": "^2.2",
+        "curl/curl": "^1.6"
     },
     "require-dev": {
       "phpunit/phpunit": ">=4.8",
